--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -43,10 +43,6 @@
   <property name="windowTitle">
    <string>GDAL UI - Main Window</string>
   </property>
-  <property name="windowIcon">
-   <iconset>
-    <normaloff>:/images/images/icon.ico</normaloff>:/images/images/icon.ico</iconset>
-  </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
@@ -203,6 +199,12 @@ QPushButton{
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>...</string>
            </property>
@@ -310,6 +312,12 @@ QPushButton{
              </item>
              <item row="0" column="2">
               <widget class="QPushButton" name="nodata_output_path_btn">
+               <property name="maximumSize">
+                <size>
+                 <width>40</width>
+                 <height>16777215</height>
+                </size>
+               </property>
                <property name="text">
                 <string>...</string>
                </property>
