--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -316,7 +316,7 @@ QPushButton{
              <item row="2" column="0">
               <widget class="QGroupBox" name="plot_groupBox">
                <property name="title">
-                <string>Plot....</string>
+                <string>Plot</string>
                </property>
                <layout class="QGridLayout" name="gridLayout_10"/>
               </widget>
@@ -421,19 +421,6 @@ QPushButton{
           <string>Tiling</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_7">
-          <item row="0" column="0">
-           <widget class="QLabel" name="tiling_file_label">
-            <property name="maximumSize">
-             <size>
-              <width>100</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Select file</string>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="0" colspan="3">
            <widget class="QGroupBox" name="tiling_outdir_groupBox">
             <property name="title">
@@ -450,73 +437,55 @@ QPushButton{
             </layout>
            </widget>
           </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="tiling_file_label">
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Select file</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" colspan="2">
+           <widget class="QComboBox" name="tiling_file_cbbx"/>
+          </item>
+          <item row="4" column="2">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>97</width>
+              <height>209</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="3" column="2">
+           <widget class="QPushButton" name="tiling_save_btn">
+            <property name="maximumSize">
+             <size>
+              <width>136</width>
+              <height>22</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Save</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="0" colspan="3">
            <widget class="QGroupBox" name="tiling_options_groupBox">
             <property name="title">
              <string>Options</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_8">
-             <item row="3" column="1">
-              <widget class="QLineEdit" name="tiling_srs_lineEdit">
-               <property name="placeholderText">
-                <string>Same as source SRS</string>
-               </property>
-              </widget>
-             </item>
-             <item row="4" column="0" colspan="2">
-              <widget class="QCheckBox" name="tiling_excludetransparent_checkBox">
-               <property name="text">
-                <string>Exclude transparent tiles</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="1">
-              <widget class="QSpinBox" name="tiling_tilesize_spinBox">
-               <property name="minimum">
-                <number>1</number>
-               </property>
-               <property name="maximum">
-                <number>999999999</number>
-               </property>
-               <property name="value">
-                <number>256</number>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="tiling_resampling_label">
-               <property name="text">
-                <string>Resampling</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QComboBox" name="tiling_profile_comboBox">
-               <item>
-                <property name="text">
-                 <string>mercator</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>geodetic</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>raster</string>
-                </property>
-               </item>
-              </widget>
-             </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="tiling_profile_label">
-               <property name="text">
-                <string>Profile</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
+             <item row="1" column="2">
               <widget class="QComboBox" name="tiling_resampling_comboBox">
                <item>
                 <property name="text">
@@ -585,10 +554,63 @@ QPushButton{
                </item>
               </widget>
              </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="tiling_srs_label">
+             <item row="2" column="2">
+              <widget class="QSpinBox" name="tiling_tilesize_spinBox">
+               <property name="minimum">
+                <number>1</number>
+               </property>
+               <property name="maximum">
+                <number>999999999</number>
+               </property>
+               <property name="value">
+                <number>256</number>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="0" colspan="3">
+              <widget class="QCheckBox" name="tiling_excludetransparent_checkBox">
                <property name="text">
-                <string>SRS</string>
+                <string>Exclude transparent tiles</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="tiling_resampling_label">
+               <property name="text">
+                <string>Resampling</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
+              <widget class="QComboBox" name="tiling_profile_comboBox">
+               <item>
+                <property name="text">
+                 <string>mercator</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>geodetic</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>raster</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="tiling_profile_label">
+               <property name="text">
+                <string>Profile</string>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="0" colspan="3">
+              <widget class="QCheckBox" name="tiling_xyz_checkbox">
+               <property name="text">
+                <string>Generate XYZ tiles</string>
                </property>
               </widget>
              </item>
@@ -599,44 +621,50 @@ QPushButton{
                </property>
               </widget>
              </item>
-             <item row="5" column="0" colspan="2">
-              <widget class="QCheckBox" name="tiling_xyz_checkbox">
+             <item row="3" column="0">
+              <widget class="QLabel" name="tiling_zoom_label">
                <property name="text">
-                <string>Generate XYZ tiles</string>
+                <string>Zoom</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QLabel" name="tiling_nodata_label">
+               <property name="text">
+                <string>NoData</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="2">
+              <widget class="QLineEdit" name="tiling_nodata_lineEdit">
+               <property name="placeholderText">
+                <string>New NoData value</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="2">
+              <widget class="QLineEdit" name="tiling_zoom_lineEdit">
+               <property name="placeholderText">
+                <string>Format: ’2-5’, ‘10-’ or ‘10</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="2">
+              <widget class="QLineEdit" name="tiling_srs_lineEdit">
+               <property name="placeholderText">
+                <string>Same as source SRS</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="0">
+              <widget class="QLabel" name="tiling_srs_label">
+               <property name="text">
+                <string>SRS</string>
                </property>
               </widget>
              </item>
             </layout>
            </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="QPushButton" name="tiling_save_btn">
-            <property name="maximumSize">
-             <size>
-              <width>136</width>
-              <height>22</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Save</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="2">
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>97</width>
-              <height>209</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="QComboBox" name="tiling_file_cbbx"/>
           </item>
          </layout>
         </widget>
