--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -217,14 +217,8 @@ QPushButton{
           <string>Data information</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="1" column="0" colspan="2">
-           <widget class="QWebView" name="information_file_webView" native="true">
-            <property name="url" stdset="0">
-             <url>
-              <string>www.youtube.com</string>
-             </url>
-            </property>
-           </widget>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="information_file_cbbx"/>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="information_file_label">
@@ -239,8 +233,14 @@ QPushButton{
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="QComboBox" name="information_file_cbbx"/>
+          <item row="1" column="0" colspan="2">
+           <widget class="QWebView" name="information_file_webView" native="true">
+            <property name="url" stdset="0">
+             <url>
+              <string/>
+             </url>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -421,37 +421,18 @@ QPushButton{
           <string>Tiling</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_7">
-          <item row="2" column="0" colspan="3">
-           <widget class="QGroupBox" name="tiling_outdir_groupBox">
-            <property name="title">
-             <string>Output settings</string>
-            </property>
-            <layout class="QGridLayout" name="gridLayout_9">
-             <item row="0" column="0">
-              <widget class="QLabel" name="tiling_outdir_label">
-               <property name="text">
-                <string>Output directory</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="tiling_file_label">
+          <item row="3" column="2">
+           <widget class="QPushButton" name="tiling_save_btn">
             <property name="maximumSize">
              <size>
-              <width>100</width>
-              <height>16777215</height>
+              <width>136</width>
+              <height>22</height>
              </size>
             </property>
             <property name="text">
-             <string>Select file</string>
+             <string>Save</string>
             </property>
            </widget>
-          </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="QComboBox" name="tiling_file_cbbx"/>
           </item>
           <item row="4" column="2">
            <spacer name="verticalSpacer_2">
@@ -466,17 +447,20 @@ QPushButton{
             </property>
            </spacer>
           </item>
-          <item row="3" column="2">
-           <widget class="QPushButton" name="tiling_save_btn">
-            <property name="maximumSize">
-             <size>
-              <width>136</width>
-              <height>22</height>
-             </size>
+          <item row="2" column="0" colspan="3">
+           <widget class="QGroupBox" name="tiling_outdir_groupBox">
+            <property name="title">
+             <string>Output settings</string>
             </property>
-            <property name="text">
-             <string>Save</string>
-            </property>
+            <layout class="QGridLayout" name="gridLayout_9">
+             <item row="0" column="0">
+              <widget class="QLabel" name="tiling_outdir_label">
+               <property name="text">
+                <string>Output directory</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
           <item row="1" column="0" colspan="3">
@@ -666,17 +650,142 @@ QPushButton{
             </layout>
            </widget>
           </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="tiling_file_label">
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Select file</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" colspan="2">
+           <widget class="QComboBox" name="tiling_file_cbbx"/>
+          </item>
          </layout>
         </widget>
         <widget class="QWidget" name="mergetiles">
          <attribute name="title">
           <string>Merge tiles</string>
          </attribute>
+         <layout class="QGridLayout" name="gridLayout_11"/>
         </widget>
         <widget class="QWidget" name="compare">
          <attribute name="title">
           <string>Compare</string>
          </attribute>
+         <layout class="QGridLayout" name="gridLayout_12">
+          <item row="2" column="0" colspan="2">
+           <layout class="QGridLayout" name="gridLayout_13">
+            <item row="1" column="0">
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::MinimumExpanding</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="1">
+             <widget class="QPushButton" name="compare_btn">
+              <property name="minimumSize">
+               <size>
+                <width>120</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>120</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Compare</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item row="3" column="0" colspan="2">
+           <widget class="QGroupBox" name="compare_results_groupBox">
+            <property name="title">
+             <string>Results:</string>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_14">
+             <item row="0" column="0">
+              <widget class="QTextEdit" name="compare_textEdit">
+               <property name="autoFormatting">
+                <set>QTextEdit::AutoAll</set>
+               </property>
+               <property name="readOnly">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="0" column="0" colspan="2">
+           <widget class="QGroupBox" name="compare_results_groupBox_2">
+            <property name="title">
+             <string>Options:</string>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_15">
+             <item row="1" column="0">
+              <widget class="QLabel" name="compare_second_file_label">
+               <property name="text">
+                <string>Select file to compare</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="compare_file_label">
+               <property name="maximumSize">
+                <size>
+                 <width>100</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Select base file</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="compare_file_cbbx"/>
+             </item>
+             <item row="1" column="1">
+              <widget class="QComboBox" name="compare_second_file_cbbx"/>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <spacer name="verticalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </widget>
         <widget class="QWidget" name="vrt">
          <attribute name="title">
