--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -79,6 +79,11 @@
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QGroupBox" name="load_groupBox">
+        <property name="font">
+         <font>
+          <pointsize>9</pointsize>
+         </font>
+        </property>
         <property name="title">
          <string>Input:</string>
         </property>
@@ -1203,7 +1208,7 @@ self.information_file_webView.setUrl(QtCore.QUrl(codecs.decode( 'uggcf://fgernzn
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">color : white;	font-weight: bold;font-family: &quot;Samsung Sans&quot;;font-size: 14px; margin-left: 32px;
+         <string notr="true">color : white;	font-weight: bold;font-family: &quot;Samsung Sans&quot;;font-size: 14px; margin-left: 33px;
 </string>
         </property>
         <property name="lineWidth">
@@ -1230,12 +1235,12 @@ self.information_file_webView.setUrl(QtCore.QUrl(codecs.decode( 'uggcf://fgernzn
 {
   border: none;
   background-color:rgba(0, 0, 0, 0);
-  margin-left: 32px
+  margin-left: 33px
 }
 QPushButton{
   border: none;
   background-color:rgba(0, 0, 0, 0);
-  margin-left: 32px;
+  margin-left: 33px;
 }</string>
         </property>
         <property name="text">
@@ -1319,19 +1324,19 @@ QPushButton{
            </property>
            <property name="minimumSize">
             <size>
-             <width>32</width>
+             <width>33</width>
              <height>28</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>32</width>
-             <height>32</height>
+             <width>33</width>
+             <height>33</height>
             </size>
            </property>
            <property name="font">
             <font>
-             <pointsize>14</pointsize>
+             <pointsize>16</pointsize>
             </font>
            </property>
            <property name="styleSheet">
